fix broken center alignment

--- a/war4crown/css/medium.css
+++ b/war4crown/css/medium.css
@@ -46,7 +46,7 @@ main .gallery figure {
 }
 
 /*----------- ARTICLE --------------*/
-main .secrown .active, main .dead, main .dpc, main .pc, main .inactive, main .unknown, main .target, main .crown, main .asset, main .agent, main .secrown {
+main .secrown, main .active, main .dead, main .dpc, main .pc, main .inactive, main .unknown, main .target, main .crown, main .asset, main .agent, main .secrown {
   justify-content: center;
 }
 main .secrown article, main .active article, main .dead article, main .dpc article, main .pc article, main .inactive article, main .unknown article, main .target article, main .crown article, main .asset section, main .agent article {
